Include link to portfolio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<footer>
 		<div class="container">
-			<p class="text-center">&copy; Copyright 2017 - Manten</p>
+			<p class="text-center">&copy; Copyright 2017 - <a href="http://manten-dev.me/">Manten Developement</a></p>
 		</div>
 	</footer>
 
